# vector-playground

./: .clang-format  .gitignore  CMakeLists.txt  README.md
benchmark/: vec_bench.cpp
include/vecplay/: bench.hpp  kernels.hpp
scripts/: benchmark_saxpy.sh  check-clang-format.sh
src/: bench.cpp  kernels.cpp
